# ChangeLog for media-video/vdr
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.52 2004/06/10 18:33:48 fow0ryl Exp $

*vdr-1.3.10 (10 June 2004)
  10 June 2004: Henning Ryll <henning.ryll@web.de>
  Version bump to 1.3.10 with AC3overDVB Support & beauty patch 

*vdr-1.3.9 (1 June 2004)
  1. June 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.9
  Version bump to vanilla 1.3.9

  3. June 2004: Henning Ryll <henning.ryll@web.de>
  AC3overDVB patch added

*vdr-1.3.8 (25 May 2004)
  25. May 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.8
  Version bump to vanilla 1.3.8

*vdr-1.3.7 (16 May 2004)
  16. May 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.7
  Version bump to vanilla 1.3.7

*vdr-1.3.6-r1 (23 Apr 2004)
  15. May 2004: Martin Hierling <mad@cc.fh-lippe.de>
  renamed fam depend for init script to famd

  23. Apr 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6-r1.ebuild
  Support for 2.6 kernels and other improvements

  29. Apr 2004: Henning Ryll <henning.ryll@web.de> vdr-1.3.6-r1.ebuild
  libsi patch added

*vdr-1.3.6 (18. March 2004)
  18. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  Added xpm logos

*vdr-1.3.6 (15. March 2004)
  15. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  Added elchi patch

*vdr-1.3.6 (14. March 2004)
  14. March 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.6.ebuild:
  version bump.

vdr-1.3.4
  15 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
  initial 1-3.4
  added Elchi

vdr-1.3.2
  24 Jan 2004; M.Hierling <mad@cc.fh-lippe.de>
  initial, removed some includes, libs
  removed all patches, this is vanilla

*vdr-1.2.6-r5
  12 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
  added upt patch provided by thoand
  new vdr_opts put
  switched back to ~x86
