@@ -1,3 +1,4 @@
 MD5 580fd2abafa044c8b143fa87713a0f00 vdr-1.3.10.tar.bz2 441509
 MD5 e165d4253281107a9501c74dc1c8f449 vdr-1.3.10-AC3overDVB-0.2.6.diff.gz 28083
 MD5 40364a7807ac5bd493ccc17eda596405 vdr-1.3.10-beauty.diff.gz 2216
+MD5 57dd49a3e95046c6708583716fc49f61 vdr-1.3.10-enAIO-1.2.diff.gz 7165
