@@ -1,10 +1,13 @@
 # ChangeLog for media-video/vdr
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.52 2004/06/10 18:33:48 fow0ryl Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.53 2004/06/12 17:07:11 fow0ryl Exp $
 
 *vdr-1.3.10 (10 June 2004)
   10 June 2004: Henning Ryll <henning.ryll@web.de>
   Version bump to 1.3.10 with AC3overDVB Support & beauty patch 
+ 
+  12 June 2004: Henning Ryll <henning.ryll@web.de>
+  AOI patch added, VDROPTS changed
 
 *vdr-1.3.9 (1 June 2004)
   1. June 2004: Christian Gmeiner <christian at visual-page.de> vdr-1.3.9
